Use the padding area to resolve percentages in fixed positioning

Currently only 'position: absolute' uses the padding area of the
containing block in 'top' and 'bottom' properties, 'position: fixed'
uses the content area instead.

The change only affects the value returned by getComputedStyle, the used
value was already correct.

BUG=883585

TEST=external/wpt/css/cssom/getComputedStyle-insets-fixed.html

The test still has some failures due to http://crbug.com/883582,
http://crbug.com/883574 and http://crbug.com/888532.

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I91a07472026f50cb60e0225a4e8edd515c04ec6a
Reviewed-on: https://chromium-review.googlesource.com/1240124
Commit-Queue: Oriol Brufau <obrufau@igalia.com>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594137}