third_party/blink/renderer/core/layout/layout_box.cc
@@ -2114,7 +2114,7 @@ LayoutUnit LayoutBox::ContainingBlockLogicalHeightForGetComputedStyle() const {
 
   LayoutBoxModelObject* cb = ToLayoutBoxModelObject(Container());
   LayoutUnit height = ContainingBlockLogicalHeightForPositioned(cb);
-  if (StyleRef().GetPosition() != EPosition::kAbsolute)
+  if (IsInFlowPositioned())
     height -= cb->PaddingLogicalHeight();
   return height;
 }
